# add-scripts

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml
src/add_scripts/: data.py
src/add_scripts/check_downloads/: __main__.py
src/add_scripts/check_transfer_option_urls_unique/: __main__.py
src/add_scripts/check_transfer_options/: __main__.py
src/add_scripts/clean_services/: __main__.py
src/add_scripts/clone_records/: __main__.py
src/add_scripts/fix_citation/: __main__.py
src/add_scripts/not_updated/: utils.py
src/add_scripts/not_updated/register_lookups/: __main__.py
src/add_scripts/register_lookups/: __main__.py
src/add_scripts/set_citation/: __main__.py
src/add_scripts/set_dates/: __main__.py
src/add_scripts/set_resource_id/: __main__.py
src/add_scripts/set_transfer_option_urls/: __main__.py
src/add_scripts/set_transfer_options/: __main__.py
src/add_scripts/update_collections/: __main__.py
src/add_scripts/x_convert_from_store/: __main__.py
src/add_scripts/x_convert_to_store/: __main__.py
