[tool.poetry]
name = "add-scripts"
version = "0.2.0"
description = "Scripts for use in SCAR ADD releases"
authors = ["Felix Fennell <felnne@bas.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
inquirer = "^3.4.0"
requests = "^2.32.3"
lxml = "^5.3.0"
tqdm = "^4.67.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
